modified:   Untitled-1.html

--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -28,7 +28,7 @@
 
 
     <main class="responsive">
-      <article class="absolute border medium no-padding">
+      <article class="absolute medium medium-padding">
         <div class="padding absolute center middle">
           <h2>title</h2>
           <div class="epdesc">episode description :3</div>
@@ -43,7 +43,7 @@
 
       <div class="row absolute top right small-margin">
 
-        <button class="circle fill" onclick="ui('mode', ui('mode') == 'protocol' ? 'plain' : 'protocol')">
+        <button class="transparent circle" onclick="ui('mode', ui('mode') == 'protocol' ? 'plain' : 'protocol')">
           <i>brightness_medium</i>
         </button>
 
