modified:   Untitled-1.html

--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -28,8 +28,8 @@
 
 
     <main class="responsive">
-      <article class="absolute medium medium-padding">
-        <div class="padding absolute center middle">
+      <article class="absolute medium-padding">
+        <div class=" medium-padding absolute center middle scroll">
           <h2>title</h2>
           <div class="epdesc">episode description :3</div>
           <h3>subheader</h3>
