--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -28,7 +28,7 @@
 
 
     <main class="responsive">
-      <article class="absolute medium-padding">
+      <article class="absolute medium-padding center middle">
         <div class=" medium-padding absolute center middle scroll">
           <h2>title</h2>
           <div class="epdesc">episode description :3</div>
