modified:   Untitled-1.html

--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -21,7 +21,8 @@
     <!-- BEERCSS: beercss.com | github.com/beercss -->
 <link href="beer.min.css" rel="stylesheets"/>
 <script type="module" src="beer.min.js"></script>
-
+    <!-- PHOSPHOR: github.com/phosphor-icons-->
+<script src="https://unpkg.com/@phosphor-icons/web"></script>
 </head>
 
 <body class="protocol">
@@ -44,7 +45,7 @@
       <div class="row absolute top right small-margin">
 
         <button class="transparent circle" onclick="ui('mode', ui('mode') == 'protocol' ? 'plain' : 'protocol')">
-          <i>brightness_medium</i>
+          <i class="ph-duotone ph-swap"></i>
         </button>
 
       </div>
