--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -29,8 +29,8 @@
 
 
     <main class="responsive">
-      <article class="absolute medium-padding center middle">
-        <div class=" medium-padding absolute center middle scroll">
+      <article class="absolute top left right bottom round large-padding large-margin large-elevate">
+        <div class="absolute middle center">
           <h2>title</h2>
           <div class="epdesc">episode description :3</div>
           <h3>subheader</h3>
