modified:   Untitled-1.html

--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -28,7 +28,7 @@
 <body class="protocol">
 
 
-    <main class="responsive">
+    <main class="responsive flex">
       <article class="absolute top left right bottom round large-padding large-margin large-elevate">
         <div class="absolute middle center">
           <h2>title</h2>
