--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -29,7 +29,7 @@
 
 
     <main class="responsive flex">
-      <article class="absolute top left right bottom round large-padding large-margin large-elevate middle center">
+      <article class="absolute round large-padding large-margin large-elevate middle center">
         <div class="absolute middle center">
           <h2>title</h2>
           <div class="epdesc">episode description :3</div>
@@ -45,7 +45,7 @@
       <div class="row absolute top right small-margin">
 
         <button class="transparent circle" onclick="ui('mode', ui('mode') == 'protocol' ? 'plain' : 'protocol')">
-          <i class="ph-swap"></i>
+          <i class="ph-bold ph-swap"></i>
         </button>
 
       </div>
