--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -19,7 +19,6 @@
 <link href="https://fonts.googleapis.com/css2?family=Besley:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
 
     <!-- BEERCSS: beercss.com | github.com/beercss -->
-<link href="beer.min.css" rel="stylesheets"/>
 <script type="module" src="beer.min.js"></script>
     <!-- PHOSPHOR: github.com/phosphor-icons-->
 <script src="https://unpkg.com/@phosphor-icons/web"></script>
@@ -29,7 +28,7 @@
 
 
     <main class="responsive flex">
-      <article class="absolute round large-padding large-margin large-elevate middle center">
+      <article class="absolute top left right bottom round large-padding large-margin large-elevate">
         <div class="absolute middle center">
           <h2>title</h2>
           <div class="epdesc">episode description :3</div>
