modified:   Untitled-1.html 	modified:   beer.min.css 	modified:   prototype.css

--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -44,7 +44,7 @@
       <div class="row absolute top right small-margin">
 
         <button class="transparent circle" onclick="ui('mode', ui('mode') == 'protocol' ? 'plain' : 'protocol')">
-          <i class="ph-bold ph-swap"></i>
+          <i class="ph-bold ph-swap btn"></i>
         </button>
 
       </div>
