modified:   Untitled-1.html 	modified:   prototype.css

--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -28,7 +28,7 @@
 
 
     <main class="responsive flex">
-      <article class="absolute top left right bottom round large-padding large-margin large-elevate">
+      <article class="absolute top left right bottom round medium-padding large-margin large-elevate">
         <div class="absolute middle center">
           <h2>title</h2>
           <div class="epdesc">episode description :3</div>
