--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -30,24 +30,46 @@
     <main class="responsive flex">
       <article class="absolute top left right bottom round medium-padding large-margin large-elevate">
         <div class="absolute middle center">
-          <h2>title</h2>
-          <div class="epdesc">episode description :3</div>
-          <h3>subheader</h3>
-          <h6>quotes n shit</h6>
-          <div>normal text, with <b>bold</b> and <i>italics.</i></div>
-          <div><span class="imp">important</span>, <span class="ment">only mentioned</span>,
-          <span class="sus">suspected</span></div>
+
+          <div class="page active" id="info">
+
+            <h2>title</h2>
+            <div class="epdesc">episode description :3</div>
+            <h3>subheader</h3>
+            <h6>quotes n shit</h6>
+            <div>normal text, with <b>bold</b> and <i>italics.</i></div>
+            <div><span class="imp">important</span>, <span class="ment">only mentioned</span>,
+            <span class="sus">suspected</span></div>
+
+          </div>
+
+          <div class="page" id="nav">
+
+            <div><span class="imp">important</span>, <span class="ment">only mentioned</span>,
+            <span class="sus">suspected</span></div>
+
+          </div>
+
         </div>
       </article>
-      
 
-      <div class="row absolute top right small-margin">
+      <div class="row absolute top right medium-margin">
 
         <button class="transparent circle" onclick="ui('mode', ui('mode') == 'protocol' ? 'plain' : 'protocol')">
           <i class="ph-bold ph-swap btn"></i>
         </button>
 
       </div>
+    
+      <script>
+        function navPage() {
+          var element = document.getElementById("myDIV");
+          element.classList.toggle("active");
+          var element = document.getElementById("myP");
+          element.classList.toggle("active");
+        }
+      </script>
+
     </main>
 
 </body>
