modified:   Untitled-1.html 	modified:   beer.min.css

--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -61,6 +61,16 @@
 
       </div>
 
+    
+      <script>
+        function navPage() {
+          var element = document.getElementById("myDIV");
+          element.classList.toggle("active");
+          var element = document.getElementById("myP");
+          element.classList.toggle("active");
+        }
+      </script>
+      
     </main>
 
 </body>
