modified:   Untitled-1.html

--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -28,7 +28,7 @@
 
 
     <main class="responsive flex">
-      <article class="absolute top left right bottom round medium-padding large-margin large-elevate">
+      <article class="absolute middle center round medium-padding large-margin">
         <div class="absolute middle center">
 
           <div class="page active" id="info">
@@ -70,7 +70,7 @@
           element.classList.toggle("active");
         }
       </script>
-      
+
     </main>
 
 </body>
