modified:   Untitled-1.html 	modified:   prototype.css

--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -28,8 +28,8 @@
 
 
     <main class="responsive flex">
-      <article class="absolute middle center round medium-padding large-margin">
-        <div class="absolute middle center">
+      <article class="absolute round medium-padding large-margin">
+        <div class="absolute">
 
           <div class="page active" id="info">
 
