modified:   Untitled-1.html

--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -28,7 +28,7 @@
 
 
     <main class="responsive flex">
-      <article class="absolute round medium-padding large-margin">
+      <article class="absolute top left right bottom round medium-padding large-margin">
         <div class="absolute">
 
           <div class="page active" id="info">
