modified:   Untitled-1.html

--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -57,6 +57,11 @@
           <div class="tooltip left">swap protocol red with plain colors</div>
         </button>
 
+        <button class="transparent circle" onclick="navPage()">
+          <i class="ph-bold ph-swap btn"></i>
+          <div class="tooltip left">swap protocol red with plain colors</div>
+        </button>
+
       </div>
 
     
