modified:   Untitled-1.html 	modified:   prototype.css

--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -54,7 +54,7 @@
 
         <button class="transparent circle" onclick="ui('mode', ui('mode') == 'protocol' ? 'plain' : 'protocol')">
           <i class="ph-bold ph-swap btn"></i>
-          <div class="tooltip left">swap protocol red with plain colors</div>
+          <div class="tooltip left">swap protocol red <br> with plain colors</div>
         </button>
 
         <button class="transparent circle" onclick="navPage()">
