modified:   Untitled-1.html 	modified:   beer.min.css

--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -36,8 +36,8 @@
             <h2>title</h2>
             <div class="epdesc">episode description :3</div>
             <h3>subheader</h3>
-            <h6>quotes n shit</h6>
             <div>normal text, with <b>bold</b> and <i>italics.</i></div>
+            <h6>quotes n shit</h6>
 
           </div>
           
@@ -59,7 +59,7 @@
 
         <button class="transparent circle" onclick="navPage()">
           <i class="ph-bold ph-swap btn"></i>
-          <div class="tooltip left">swap protocol red with plain colors</div>
+          <div class="tooltip left">navigation & key</div>
         </button>
 
       </div>
