modified:   Untitled-1.html 	modified:   beer.min.css 	modified:   prototype.css

--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -36,7 +36,7 @@
             <h2>title</h2>
             <div class="epdesc">episode description :3</div>
             <h3>subheader</h3>
-            <div>normal text, with <b>bold</b> and <i>italics.</i></div>
+            <div>normal text, with <span class="b">bold</span> and <span class="i">italics.</span></div>
             <h6>quotes n shit</h6>
 
           </div>
