modified:   Untitled-1.html

--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -36,7 +36,16 @@
             <h2>title</h2>
             <div class="epdesc">episode description :3</div>
             <h3>subheader</h3>
-            <div>normal text, with <span class="b">bold</span> and <span class="i">italics.</span></div>
+            <section class="info">
+              <div class="sect">
+                  <div class="cluster"><p>
+                  <span class="prompt">
+                      Prompt: &nbsp;
+                  </span>
+                  normal answer, <b>bold answer</b>, <i>italicized answer</i>
+                  </p></div>
+              </div>
+            </section>
             <h6>quotes n shit</h6>
 
           </div>
