--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -31,7 +31,7 @@
       <article class="absolute top left right bottom round medium-padding large-margin scroll">
         <div class="absolute">
 
-          <div class="page active" id="info">
+          <div class="page active responsive" id="info">
 
             <h2>title</h2>
             <div class="epdesc">episode description :3</div>
@@ -59,7 +59,7 @@
         </div>
       </article>
 
-      <div class="row absolute top right medium-margin">
+      <div class="row absolute top right medium-margin responsive">
 
         <button class="transparent circle" onclick="ui('mode', ui('mode') == 'protocol' ? 'plain' : 'protocol')">
           <i class="ph-bold ph-swap btn"></i>
