modified:   Untitled-1.html

--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -67,7 +67,7 @@
         </button>
 
         <button class="transparent circle" onclick="navPage()">
-          <i class="ph-bold ph-swap btn"></i>
+          <i class="ph-bold ph-eye-slash"></i>
           <div class="tooltip left">navigation & key</div>
         </button>
 
