modified:   Untitled-1.html

--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -28,8 +28,8 @@
 
 
     <main class="responsive flex">
-      <article class="absolute top left right bottom round medium-padding large-margin scroll">
-        <div class="absolute">
+      <article class="absolute top left right bottom round medium-padding large-margin">
+        <div class="absolute scroll">
 
           <div class="page active responsive" id="info">
 
@@ -59,7 +59,7 @@
         </div>
       </article>
 
-      <div class="row absolute top right medium-margin responsive">
+      <div class="column absolute top right medium-margin responsive">
 
         <button class="transparent circle" onclick="ui('mode', ui('mode') == 'protocol' ? 'plain' : 'protocol')">
           <i class="ph-bold ph-swap btn"></i>
@@ -67,7 +67,7 @@
         </button>
 
         <button class="transparent circle" onclick="navPage()">
-          <i class="ph-bold ph-eye-slash"></i>
+          <i class="ph-bold ph-eye-slash btn"></i>
           <div class="tooltip left">navigation & key</div>
         </button>
 
