--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -30,8 +30,8 @@
     <main class="responsive flex">
       <article class="absolute top left right bottom round medium-padding large-margin">
         <div class="absolute scroll">
-
-          <div class="page active responsive" id="info">
+          <div class="page active" id="info">
+            <div class="responsive">
 
             <h2>title</h2>
             <div class="epdesc">episode description :3</div>
@@ -47,7 +47,8 @@
               </div>
             </section>
             <h6>quotes n shit</h6>
-
+            
+          </div>
           </div>
           
           <div class="page" id="nav">
