--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -30,8 +30,9 @@
     <main class="responsive flex">
       <article class="absolute top left right bottom round medium-padding large-margin">
         <div class="absolute scroll">
-          <div class="page active" id="info">
-            
+
+          <div class="page active responsive" id="info">
+
             <h2>title</h2>
             <div class="epdesc">episode description :3</div>
             <h3>subheader</h3>
@@ -58,7 +59,7 @@
         </div>
       </article>
 
-      <div class="column absolute top right medium-margin responsive">
+      <div class="row absolute top right medium-margin">
 
         <button class="transparent circle" onclick="ui('mode', ui('mode') == 'protocol' ? 'plain' : 'protocol')">
           <i class="ph-bold ph-swap btn"></i>
@@ -66,7 +67,7 @@
         </button>
 
         <button class="transparent circle" onclick="navPage()">
-          <i class="ph-bold ph-eye-slash btn"></i>
+          <i class="ph-bold ph-swap btn"></i>
           <div class="tooltip left">navigation & key</div>
         </button>
 
