--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -11,7 +11,7 @@
 <title>TMP000: / MAG000: ???</title>
 
     <!-- stylesheets -->
-<link rel="stylesheet" href="prototype.css"/>
+<link rel="stylesheet" href="prototyp.css"/>
 
     <!-- font -->
 <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -27,11 +27,11 @@
 <body class="protocol">
 
 
-    <main class="responsive flex">
-      <article class="absolute top left right bottom round medium-padding large-margin">
-        <div class="absolute scroll">
+    <main class="responsive flex large-width large-height">
+      <article class="absolute large-width large-height middle round medium-padding">
+        <div class="absolute round large-width large-height">
 
-          <div class="page active responsive" id="info">
+          <div class="page active" id="info">
 
             <h2>title</h2>
             <div class="epdesc">episode description :3</div>
@@ -42,7 +42,7 @@
                   <span class="prompt">
                       Prompt: &nbsp;
                   </span>
-                  normal answer, <b>bold answer</b>, <i>italicized answer</i>
+                  normal answer, <b>bold answer</b>, <i>italicized answer</i> i love answering
                   </p></div>
               </div>
             </section>
@@ -59,7 +59,7 @@
         </div>
       </article>
 
-      <div class="row absolute top right medium-margin">
+      <div class="column vertical absolute top right medium-margin">
 
         <button class="transparent circle" onclick="ui('mode', ui('mode') == 'protocol' ? 'plain' : 'protocol')">
           <i class="ph-bold ph-swap btn"></i>
@@ -67,7 +67,7 @@
         </button>
 
         <button class="transparent circle" onclick="navPage()">
-          <i class="ph-bold ph-swap btn"></i>
+          <i class="ph-fill ph-eye-slash btn"></i>
           <div class="tooltip left">navigation & key</div>
         </button>
 
