--- a/index.html
+++ b/index.html
@@ -9,11 +9,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Besley:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div id="index-box">
-        <span id="index-txt">
-            my personal docs/wiki <a href="/magpod.html">here</a>
-            for <i>the magnus archives</i> 
-            and <i>the magnus protocol</i>!
+    <div>
+        <span>
         </span>
     </div>
 </body>
