work on page construction

--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html data-theme="dark">
 <head>
+      <!-- general -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes, minimum-scale=0.25, maximum-scale=5.0"/>
     <meta charset="utf-8" />
-    <link rel="stylesheet" href="/style.css"/>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Besley:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
+      <!-- stylesheet -->
+    <link rel="stylesheet/less" type="text/css" href="/style.less">
+      <!-- LESS.js: lesscss.org -->
+    <script src="less.min.js" type="text/javascript"></script>
 </head>
+
 <body>
     <div>
         <span>
