--- a/protocol.html
+++ b/protocol.html
@@ -17,11 +17,11 @@
     } 
     </script>
       <!-- STORED STYLE -->
-    <script>const storedColor = localStorage.getItem("style");
+    <!--<script>const storedColor = localStorage.getItem("style");
     if (storedColor) {
         document.documentElement.setAttribute("data-style", storedColor);
     }
-    </script>
+    </script>-->
       <!-- PHOSPHOR: github.com/phosphor-icons-->
     <script src="https://unpkg.com/@phosphor-icons/web"></script>
 </head>
