--- a/tmagp/ep/001.html
+++ b/tmagp/ep/001.html
@@ -14,26 +14,60 @@
 
 <body>
   <header>
-    <section>
-      <h1>magp<span class="nmbr">000</span>: Skeleton.</h1>
+    <section class="site navbar toggle">
+      <button onclick="navSmallS()" id="btn-small-s">
+        <i class="ph-duotone ph-mask-sad" id="i-small-s"></i>
+      </button>
+      <button onclick="navBigS()" id="btn-big-s">
+        <i class="ph-duotone ph-mask-sad" id="i-big-s"></i>
+      </button>
     </section>
-    <section  class="navbar-toggle">
-      <button onclick="nav()" id="toggle">
-        <i class="ph-duotone ph-bandaids"></i>
+
+    <section>
+      <h1>magp<span class="nmbr">001</span>: First Shift.</h1>
+    </section>
+    
+    <section class="page navbar toggle">
+      <button onclick="navSmallP()" id="btn-small-p">
+        <i class="ph-duotone ph-eye" id="i-small-p"></i>
       </button>
     </section>
   </header>
-
-  <aside class="navigation-small" id="navigation-small">
+  
+  <aside class="navbar bar site small" id="nav-small-s">
     <section>
-      <h6>magp<span class="nmbr">000</span>: Skeleton.</h6>
       <nav>
-        <div><a href="#Incident" class="title">The Incident</a></div>
-        <div><a href="#Incident-Summary" class="subtitle">Incident Summary</a></div>
-        <div><a href="#Incident-Entity" class="subtitle">Entity Influence</a></div>
-        <div><a href="#Incident-Assessment" class="subtitle">Incident Assessment</a></div>
-        <div><a href="#Incident-Significant" class="subtitle">Of Significance</a></div>
+        <div><a href="../../index.html" class="title">Home</a></div>
+        <div><a href="../../tma/index.html" class="subtitle">Magnus Archives</a></div>
+        <div><a href="../index.html" class="subtitle">Magnus Protocol</a></div>
+      </nav>
+    </section>
+    <section>
+      <h6>TMagP</h6>
+      <nav>
+        <div><a href="tmagp/episodes.html" class="title">Episodes</a></div>
+        <div><a href="tmagp/characters.html" class="title">Characters</a></div>
+        <div><a href="tmagp/002.html" class="subtitle">Next Episode</a></div>
+      </nav>
+    </section>
+  </aside>
+
+  <aside class="navbar bar page small" id="nav-small-p">
+    <section>
+      <h6>magp<span class="nmbr">001</span>: First Shift.</h6>
+      <nav>
+        <div><a href="#1st-Incident" class="title">1st Incident</a></div>
+        <div><a href="#1st-Incident-Summary" class="subtitle">Incident Summary</a></div>
+        <div><a href="#1st-Incident-Entity" class="subtitle">Entity Influence</a></div>
+        <div><a href="#1st-Incident-Assessment" class="subtitle">Incident Assessment</a></div>
+        <div><a href="#1st-Incident-Significant" class="subtitle">Of Significance</a></div>
           <hr>
+          <div><a href="#2nd-Incident" class="title">2nd Incident</a></div>
+          <div><a href="#2nd-Incident-Summary" class="subtitle">Incident Summary</a></div>
+          <div><a href="#2nd-Incident-Entity" class="subtitle">Entity Influence</a></div>
+          <div><a href="#2nd-Incident-Assessment" class="subtitle">Incident Assessment</a></div>
+          <div><a href="#2nd-Incident-Significant" class="subtitle">Of Significance</a></div>
+            <hr>
         <div><a href="#Not-Incident" class="title">Non-Incident</a></div>
         <div><a href="#Event-Summary" class="subtitle">Event Summary</a></div>
         <div><a href="#Entity" class="subtitle">Entity Influence</a></div>
@@ -50,16 +84,39 @@
   <div id="navhelper"></div>
 
   <main>
-    <aside class="navigation-large">
+    <aside class="navbar bar site big" id="nav-big-s">
       <section>
-        <h6>magp<span class="nmbr">000</span>: Skeleton.</h6>
         <nav>
-          <div><a href="#Incident" class="title">The Incident</a></div>
-          <div><a href="#Incident-Summary" class="subtitle">Incident Summary</a></div>
-          <div><a href="#Incident-Entity" class="subtitle">Entity Influence</a></div>
-          <div><a href="#Incident-Assessment" class="subtitle">O.I.A.R. Assessment</a></div>
-          <div><a href="#Incident-Significant" class="subtitle">Of Significance</a></div>
+            <div><a href="../../index.html" class="title">Home</a></div>
+            <div><a href="../../tma/index.html" class="subtitle">Magnus Archives</a></div>
+            <div><a href="../index.html" class="subtitle">Magnus Protocol</a></div>
+        </nav>
+      </section>
+      <section>
+        <h6>TMagP</h6>
+        <nav>
+            <div><a href="tmagp/episodes.html" class="title">Episodes</a></div>
+            <div><a href="tmagp/characters.html" class="title">Characters</a></div>
+            <div><a href="tmagp/002.html" class="subtitle">Next Episode</a></div>
+        </nav>
+      </section>
+    </aside>
+    <aside class="navbar bar big page" id="nav-big-p">
+      <section>
+        <h6>magp<span class="nmbr">001</span>: First Shift.</h6>
+        <nav>
+          <div><a href="#1st-Incident" class="title">1st Incident</a></div>
+          <div><a href="#1st-Incident-Summary" class="subtitle">Incident Summary</a></div>
+          <div><a href="#1st-Incident-Entity" class="subtitle">Entity Influence</a></div>
+          <div><a href="#1st-Incident-Assessment" class="subtitle">Incident Assessment</a></div>
+          <div><a href="#1st-Incident-Significant" class="subtitle">Of Significance</a></div>
             <hr>
+            <div><a href="#2nd-Incident" class="title">2nd Incident</a></div>
+            <div><a href="#2nd-Incident-Summary" class="subtitle">Incident Summary</a></div>
+            <div><a href="#2nd-Incident-Entity" class="subtitle">Entity Influence</a></div>
+            <div><a href="#2nd-Incident-Assessment" class="subtitle">Incident Assessment</a></div>
+            <div><a href="#2nd-Incident-Significant" class="subtitle">Of Significance</a></div>
+              <hr>
           <div><a href="#Not-Incident" class="title">Non-Incident</a></div>
           <div><a href="#Event-Summary" class="subtitle">Event Summary</a></div>
           <div><a href="#Entity" class="subtitle">Entity Influence</a></div>
@@ -243,13 +300,6 @@
     </article>
   </main>
 
-  <script>
-    function nav() {
-      var element = document.getElementById("navigation-small");
-      element.classList.toggle("active");
-      var element = document.getElementById("toggle");
-      element.classList.toggle("click");
-    } 
-  </script>
+  <script src="../../js/scripts.js"></script>
 </body>
 </html>
