--- a/tma/ep/001.html
+++ b/tma/ep/001.html
@@ -18,9 +18,6 @@
       <button onclick="navSmallS()" id="btn-small-s">
         <i class="ph-duotone ph-mask-sad" id="i-small-s"></i>
       </button>
-      <button onclick="navBigS()" id="btn-big-s">
-        <i class="ph-duotone ph-mask-sad" id="i-big-s"></i>
-      </button>
     </section>
 
     <section>
@@ -43,12 +40,18 @@
       </nav>
     </section>
     <section>
-      <h6>TMagP</h6>
+      <h6>TMA</h6>
       <nav>
-        <div><a href="tmagp/episodes.html" class="title">Episodes</a></div>
-        <div><a href="tmagp/characters.html" class="title">Characters</a></div>
+        <div><a href="tma/episodes.html" class="title">Episodes</a></div>
+        <div><a href="tma/characters.html" class="title">Characters</a></div>
         <div><a href="tmagp/002.html" class="subtitle">Next Episode</a></div>
       </nav>
+    </section>
+    <section class="legend">
+      <div>Legend</div>
+      <div>
+        <span class="mentioned">Mentioned only</span>. <span class="important">Important</span>.
+      </div>
     </section>
   </aside>
 
@@ -68,55 +71,57 @@
         <div><a href="#Significant" class="subtitle">Of Significance</a></div>
       </nav>
     </section>
-    <section class="legend">
-      <div>Legend</div>
-      <div>
-        <span class="mentioned">Mentioned only</span>. <span class="important">Important</span>.
-      </div>
-    </section>
   </aside>
   <div id="navhelper"></div>
 
   <main>
-    <aside class="navbar bar site big" id="nav-big-s">
-      <section>
-        <nav>
-            <div><a href="../../index.html" class="title">Home</a></div>
-            <div><a href="../../tma/index.html" class="subtitle">Magnus Archives</a></div>
-            <div><a href="../index.html" class="subtitle">Magnus Protocol</a></div>
-        </nav>
-      </section>
-      <section>
-        <h6>TMagP</h6>
-        <nav>
-            <div><a href="tmagp/episodes.html" class="title">Episodes</a></div>
-            <div><a href="tmagp/characters.html" class="title">Characters</a></div>
-            <div><a href="tmagp/002.html" class="subtitle">Next Episode</a></div>
-        </nav>
-      </section>
-    </aside>
-    <aside class="navbar bar big page" id="nav-big-p">
-      <section>
-        <h6>mag<span class="nmbr">000</span>: Skeleton.</h6>
-        <nav>
-          <div><a href="#Statement" class="title">The Statement</a></div>
-          <div><a href="#Statement-Summary" class="subtitle">Statement Summary</a></div>
-          <div><a href="#Statement-Entity" class="subtitle">Entity Influence</a></div>
-          <div><a href="#Statement-Assessment" class="subtitle">Archival Assessment</a></div>
-          <div><a href="#Statement-Significant" class="subtitle">Of Significance</a></div>
-            <hr>
-          <div><a href="#Not-Statement" class="title">Non-Statement</a></div>
-          <div><a href="#Event-Summary" class="subtitle">Event Summary</a></div>
-          <div><a href="#Entity" class="subtitle">Entity Influence</a></div>
-          <div><a href="#Significant" class="subtitle">Of Significance</a></div>
-        </nav>
-      </section>
-      <section class="legend">
-        <div>Legend</div>
-        <div>
-          <span class="mentioned">Mentioned only</span>. <span class="important">Important</span>.
-        </div>
-      </section>
+    <aside>
+      <div class="site navbar toggle" id="btn-div-s">
+        <button onclick="navBigS()" id="btn-big-s">
+          <i class="ph-duotone ph-mask-sad" id="i-big-s"></i>
+        </button>
+      </div>
+      
+      <aside class="navbar bar site big" id="nav-big-s">
+        <section>
+          <nav>
+              <div><a href="../../index.html" class="title">Home</a></div>
+              <div><a href="../../tma/index.html" class="subtitle">Magnus Archives</a></div>
+              <div><a href="../index.html" class="subtitle">Magnus Protocol</a></div>
+          </nav>
+        </section>
+        <section>
+          <h6>TMagP</h6>
+          <nav>
+              <div><a href="tmagp/episodes.html" class="title">Episodes</a></div>
+              <div><a href="tmagp/characters.html" class="title">Characters</a></div>
+              <div><a href="tmagp/002.html" class="subtitle">Next Episode</a></div>
+          </nav>
+        </section>
+      </aside>
+      <aside class="navbar bar big page" id="nav-big-p">
+        <section>
+          <h6>mag<span class="nmbr">000</span>: Skeleton.</h6>
+          <nav>
+            <div><a href="#Statement" class="title">The Statement</a></div>
+            <div><a href="#Statement-Summary" class="subtitle">Statement Summary</a></div>
+            <div><a href="#Statement-Entity" class="subtitle">Entity Influence</a></div>
+            <div><a href="#Statement-Assessment" class="subtitle">Archival Assessment</a></div>
+            <div><a href="#Statement-Significant" class="subtitle">Of Significance</a></div>
+              <hr>
+            <div><a href="#Not-Statement" class="title">Non-Statement</a></div>
+            <div><a href="#Event-Summary" class="subtitle">Event Summary</a></div>
+            <div><a href="#Entity" class="subtitle">Entity Influence</a></div>
+            <div><a href="#Significant" class="subtitle">Of Significance</a></div>
+          </nav>
+        </section>
+        <section class="legend">
+          <div>Legend</div>
+          <div>
+            <span class="mentioned">Mentioned only</span>. <span class="important">Important</span>.
+          </div>
+        </section>
+      </aside>
     </aside>
 
     <article>
