--- a/tma/index.html
+++ b/tma/index.html
@@ -18,9 +18,6 @@
       <button onclick="navSmallS()" id="btn-small-s">
         <i class="ph-duotone ph-mask-sad" id="i-small-s"></i>
       </button>
-      <button onclick="navBigS()" id="btn-big-s">
-        <i class="ph-duotone ph-mask-sad" id="i-big-s"></i>
-      </button>
     </section>
 
     <section>
@@ -75,42 +72,50 @@
   <div id="navhelper"></div>
 
   <main>
-    <aside class="navbar bar site big" id="nav-big-s">
-      <section>
-        <nav>
-            <div><a href="../../index.html" class="title">Home</a></div>
-            <div><a href="../../tma/index.html" class="subtitle">Magnus Archives</a></div>
-            <div><a href="../index.html" class="subtitle">Magnus Protocol</a></div>
-        </nav>
-      </section>
-      <section>
-        <h6>TMagP</h6>
-        <nav>
-            <div><a href="tmagp/episodes.html" class="title">Episodes</a></div>
-            <div><a href="tmagp/characters.html" class="title">Characters</a></div>
-            <div><a href="tmagp/002.html" class="subtitle">Next Episode</a></div>
-        </nav>
-      </section>
-    </aside>
-    <aside class="navbar bar big page" id="nav-big-p">
-      <section>
-        <h6>the Magnus Archives.</h6>
-        <nav>
-          <div><a href="episodes.html" class="title">Episodes</a></div>
-          <div><a href="season/1.html" class="subtitle">Season One</a></div>
-          <div><a href="season/2.html" class="subtitle">Season Two</a></div>
-          <div><a href="season/3.html" class="subtitle">Season Three</a></div>
-          <div><a href="season/4.html" class="subtitle">Season Four</a></div>
-          <div><a href="season/5.html" class="subtitle">Season Five</a></div>
-            <hr>
-          <div><a href="characters.html" class="title">Characters</a></div>
-          <div><a href="character/institute.html" class="subtitle">Institute Employees</a></div>
-          <div><a href="character/recurring.html" class="subtitle">Recurring</a></div>
-          <div><a href="character/other.html" class="subtitle">Other</a></div>
-            <hr>
-          <div><a href="entity.html" class="title">Entities</a></div>
-        </nav>
-      </section>
+    <aside>
+      <div class="site navbar toggle" id="btn-div-s">
+        <button onclick="navBigS()" id="btn-big-s">
+          <i class="ph-duotone ph-mask-sad" id="i-big-s"></i>
+        </button>
+      </div>
+      
+      <aside class="navbar bar site big" id="nav-big-s">
+        <section>
+          <nav>
+              <div><a href="../../index.html" class="title">Home</a></div>
+              <div><a href="../../tma/index.html" class="subtitle">Magnus Archives</a></div>
+              <div><a href="../index.html" class="subtitle">Magnus Protocol</a></div>
+          </nav>
+        </section>
+        <section>
+          <h6>TMagP</h6>
+          <nav>
+              <div><a href="tmagp/episodes.html" class="title">Episodes</a></div>
+              <div><a href="tmagp/characters.html" class="title">Characters</a></div>
+              <div><a href="tmagp/002.html" class="subtitle">Next Episode</a></div>
+          </nav>
+        </section>
+      </aside>
+      <aside class="navbar bar big page" id="nav-big-p">
+        <section>
+          <h6>the Magnus Archives.</h6>
+          <nav>
+            <div><a href="episodes.html" class="title">Episodes</a></div>
+            <div><a href="season/1.html" class="subtitle">Season One</a></div>
+            <div><a href="season/2.html" class="subtitle">Season Two</a></div>
+            <div><a href="season/3.html" class="subtitle">Season Three</a></div>
+            <div><a href="season/4.html" class="subtitle">Season Four</a></div>
+            <div><a href="season/5.html" class="subtitle">Season Five</a></div>
+              <hr>
+            <div><a href="characters.html" class="title">Characters</a></div>
+            <div><a href="character/institute.html" class="subtitle">Institute Employees</a></div>
+            <div><a href="character/recurring.html" class="subtitle">Recurring</a></div>
+            <div><a href="character/other.html" class="subtitle">Other</a></div>
+              <hr>
+            <div><a href="entity.html" class="title">Entities</a></div>
+          </nav>
+        </section>
+      </aside>
     </aside>
 
     <article>
