fix up navigation menus

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
       <!-- general -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes, minimum-scale=0.25, maximum-scale=5.0"/>
     <meta charset="utf-8" />
+    <title>the mortal garden.</title>
+    <link rel="icon" type="image/x-icon" href="img/favicon.ico">
       <!-- stylesheet -->
     <link rel="stylesheet/less" type="text/css" href="less/style.less">
       <!-- LESS.js: lesscss.org -->
@@ -34,32 +36,33 @@
   <aside class="navbar bar site small" id="nav-small-s">
     <section>
       <nav>
-        <div><a href="../../index.html" class="title">Home</a></div>
+        <div class="title">Home</div>
         <div><a href="../../tma/index.html" class="subtitle">Magnus Archives</a></div>
         <div><a href="../index.html" class="subtitle">Magnus Protocol</a></div>
       </nav>
     </section>
     <section>
-      <h6>TMagP</h6>
+      <h6>Elsewhere</h6>
       <nav>
-        <div><a href="tmagp/episodes.html" class="title">Episodes</a></div>
-        <div><a href="tmagp/characters.html" class="title">Characters</a></div>
-        <div><a href="tmagp/002.html" class="subtitle">Next Episode</a></div>
+          <div><a href="https://aguarazu.tumblr.com" class="subtitle">Tumblr</a></div>
+          <div><a href="https://afuturewithoutus.tumblr.com" class="subtitle">MagPod Sideblog</a></div>
+          <div><a href="https://x.com/metagroudon" class="subtitle">Twitter</a></div>
       </nav>
     </section>
   </aside>
 
   <aside class="navbar bar page small" id="nav-small-p">
     <section>
-      <h6>WebSite Navigation.</h6>
+      <h6>Navigation.</h6>
       <nav>
         <div><a href="tma/index.html" class="title">Magnus Archives</a></div>
-        <div><a href="tma/episodes.html" class="subtitle">Episodes</a></div>
         <div><a href="tma/characters.html" class="subtitle">Characters</a></div>
+        <div><a href="tma/fears.html" class="subtitle">Dread Powers</a></div>
+        <div><a href="tma/episodes.html" class="subtitle">Episodes</a></div>
           <hr>
         <div><a href="tmagp/index.html" class="title">Magnus Protocol</a></div>
-        <div><a href="tmagp/episodes.html" class="subtitle">Episodes</a></div>
         <div><a href="tmagp/characters.html" class="subtitle">Characters</a></div>
+        <div><a href="tmagp/episodes.html" class="subtitle">Episodes</a></div>
       </nav>
     </section>
   </aside>
@@ -76,27 +79,28 @@
       <aside class="navbar bar site big" id="nav-big-s">
         <section>
           <nav>
-              <div><a href="../../index.html" class="title">Home</a></div>
+              <div class="title">Home</div>
               <div><a href="../../tma/index.html" class="subtitle">Magnus Archives</a></div>
               <div><a href="../index.html" class="subtitle">Magnus Protocol</a></div>
           </nav>
         </section>
         <section>
-          <h6>TMagP</h6>
+          <h6>Elsewhere</h6>
           <nav>
-              <div><a href="tmagp/episodes.html" class="title">Episodes</a></div>
-              <div><a href="tmagp/characters.html" class="title">Characters</a></div>
-              <div><a href="tmagp/002.html" class="subtitle">Next Episode</a></div>
+              <div><a href="https://aguarazu.tumblr.com" class="subtitle">Tumblr</a></div>
+              <div><a href="https://afuturewithoutus.tumblr.com" class="subtitle">MagPod Sideblog</a></div>
+              <div><a href="https://x.com/metagroudon" class="subtitle">Twitter</a></div>
           </nav>
         </section>
       </aside>
       <aside class="navbar bar big page" id="nav-big-p">
         <section>
-          <h6>WebSite Navigation.</h6>
+          <h6>Navigation.</h6>
           <nav>
             <div><a href="tma/index.html" class="title">Magnus Archives</a></div>
-            <div><a href="tma/episodes.html" class="subtitle">Episodes</a></div>
             <div><a href="tma/characters.html" class="subtitle">Characters</a></div>
+            <div><a href="tma/fears.html" class="subtitle">Dread Powers</a></div>
+            <div><a href="tma/episodes.html" class="subtitle">Episodes</a></div>
               <hr>
             <div><a href="tmagp/index.html" class="title">Magnus Protocol</a></div>
             <div><a href="tmagp/episodes.html" class="subtitle">Episodes</a></div>
@@ -118,7 +122,7 @@
       <section class="cluster">
         <div>
           <p class="analysis">
-            hello, hello; welcome! i doubt you found this organically. if you did... congrats? this site is just where i dump all of my autism related to <i><b>the magnus archives</b></i> and <i><b>the magnus protocol,</b></i> mostly for myself, because i resent google docs and things of the sort; decided to just code something oriented toward this. i guess it's a little spintrest project. this will slowly build up as i go through and re-listen to/reread the transcripts for the TMA episodes, as well as the TMagP episodes that have been—and continue to—come out.
+            welcome to my autism dump relating to <b>the magnus archives</b> and <b>the magnus protocol!</b> this is mostly for myself, as someone who resents google docs and things of the sort; decided to just code something oriented toward this. i guess it's a little spintrest project. this will slowly build up as i go through and re-listen to/reread the transcripts for the TMA episodes, as well as the TMagP episodes that have been—and continue to—come out.
           </p>
           <p class="analysis">
             this site <b>will contain spoilers!</b> this is your one and only warning! <b>turn back now if you just happened to come across this and don't want spoilers to these podcasts!</b>
