--- a/tma/fears.html
+++ b/tma/fears.html
@@ -4,6 +4,8 @@
       <!-- general -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes, minimum-scale=0.25, maximum-scale=5.0"/>
     <meta charset="utf-8" />
+    <title>the dread powers.</title>
+    <link rel="icon" type="image/x-icon" href="../img/favicon.ico">
       <!-- stylesheet -->
     <link rel="stylesheet/less" type="text/css" href="../less/style.less">
       <!-- LESS.js: lesscss.org -->
@@ -15,17 +17,17 @@
 <body>
   <header>
     <section class="site navbar toggle">
-      <button onclick="navSmallS()" id="btn-small-s">
+      <button aria-label="Website navigation toggle" onclick="navSmallS()" id="btn-small-s">
         <i class="ph-duotone ph-mask-sad" id="i-small-s"></i>
       </button>
     </section>
 
     <section>
-      <h1></h1>
+      <h1>the dread powers.</h1>
     </section>
     
     <section class="page navbar toggle">
-      <button onclick="navSmallP()" id="btn-small-p">
+      <button aria-label="Current page navigation toggle" onclick="navSmallP()" id="btn-small-p">
         <i class="ph-duotone ph-eye" id="i-small-p"></i>
       </button>
     </section>
@@ -63,7 +65,7 @@
   <main>
     <aside>
       <div class="site navbar toggle" id="btn-div-s">
-        <button onclick="navBigS()" id="btn-big-s">
+        <button aria-label="Website navigation toggle" onclick="navBigS()" id="btn-big-s">
           <i class="ph-duotone ph-mask-sad" id="i-big-s"></i>
         </button>
       </div>
