--- a/tma/index.html
+++ b/tma/index.html
@@ -4,6 +4,8 @@
       <!-- general -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes, minimum-scale=0.25, maximum-scale=5.0"/>
     <meta charset="utf-8" />
+    <title>the magnus archives.</title>
+    <link rel="icon" type="image/x-icon" href="../img/favicon.ico">
       <!-- stylesheet -->
     <link rel="stylesheet/less" type="text/css" href="../less/style.less">
       <!-- LESS.js: lesscss.org -->
@@ -15,7 +17,7 @@
 <body>
   <header>
     <section class="site navbar toggle">
-      <button onclick="navSmallS()" id="btn-small-s">
+      <button aria-label="Website navigation toggle" onclick="navSmallS()" id="btn-small-s">
         <i class="ph-duotone ph-mask-sad" id="i-small-s"></i>
       </button>
     </section>
@@ -25,7 +27,7 @@
     </section>
     
     <section class="page navbar toggle">
-      <button onclick="navSmallP()" id="btn-small-p">
+      <button aria-label="Current page navigation toggle" onclick="navSmallP()" id="btn-small-p">
         <i class="ph-duotone ph-eye" id="i-small-p"></i>
       </button>
     </section>
@@ -34,17 +36,17 @@
   <aside class="navbar bar site small" id="nav-small-s">
     <section>
       <nav>
-        <div><a href="../../index.html" class="title">Home</a></div>
-        <div><a href="../../tma/index.html" class="subtitle">Magnus Archives</a></div>
-        <div><a href="../index.html" class="subtitle">Magnus Protocol</a></div>
+        <div><a href="../index.html" class="title">Home</a></div>
+        <div>Magnus Archives</div>
+        <div><a href="../tmagp/index.html" class="subtitle">Magnus Protocol</a></div>
       </nav>
     </section>
     <section>
-      <h6>TMagP</h6>
+      <h6>TMA</h6>
       <nav>
-        <div><a href="tmagp/episodes.html" class="title">Episodes</a></div>
-        <div><a href="tmagp/characters.html" class="title">Characters</a></div>
-        <div><a href="tmagp/002.html" class="subtitle">Next Episode</a></div>
+          <div><a href="episodes.html" class="title">Episodes</a></div>
+          <div><a href="characters.html" class="title">Characters</a></div>
+          <div><a href="fears.html" class="subtitle">Entities</a></div>
       </nav>
     </section>
   </aside>
@@ -61,11 +63,11 @@
           <div><a href="season/5.html" class="subtitle">Season Five</a></div>
             <hr>
           <div><a href="characters.html" class="title">Characters</a></div>
-          <div><a href="character/institute.html" class="subtitle">Institute Employees</a></div>
-          <div><a href="character/recurring.html" class="subtitle">Recurring</a></div>
-          <div><a href="character/other.html" class="subtitle">Other</a></div>
+          <div><a href="char/institute.html" class="subtitle">Institute Employees</a></div>
+          <div><a href="char/recurring.html" class="subtitle">Recurring</a></div>
+          <div><a href="char/other.html" class="subtitle">Other</a></div>
             <hr>
-          <div><a href="entity.html" class="title">Entities</a></div>
+          <div><a href="fears.html" class="title">Entities</a></div>
         </nav>
       </section>
   </aside>
@@ -74,7 +76,7 @@
   <main>
     <aside>
       <div class="site navbar toggle" id="btn-div-s">
-        <button onclick="navBigS()" id="btn-big-s">
+        <button aria-label="Website navigation toggle" onclick="navBigS()" id="btn-big-s">
           <i class="ph-duotone ph-mask-sad" id="i-big-s"></i>
         </button>
       </div>
@@ -82,17 +84,17 @@
       <aside class="navbar bar site big" id="nav-big-s">
         <section>
           <nav>
-              <div><a href="../../index.html" class="title">Home</a></div>
-              <div><a href="../../tma/index.html" class="subtitle">Magnus Archives</a></div>
-              <div><a href="../index.html" class="subtitle">Magnus Protocol</a></div>
+              <div><a href="../index.html" class="title">Home</a></div>
+              <div class="subtitle">Magnus Archives</div>
+              <div><a href="../tmagp/index.html" class="subtitle">Magnus Protocol</a></div>
           </nav>
         </section>
         <section>
-          <h6>TMagP</h6>
+          <h6>TMA</h6>
           <nav>
-              <div><a href="tmagp/episodes.html" class="title">Episodes</a></div>
-              <div><a href="tmagp/characters.html" class="title">Characters</a></div>
-              <div><a href="tmagp/002.html" class="subtitle">Next Episode</a></div>
+              <div><a href="episodes.html" class="title">Episodes</a></div>
+              <div><a href="characters.html" class="title">Characters</a></div>
+              <div><a href="fears.html" class="subtitle">Entities</a></div>
           </nav>
         </section>
       </aside>
@@ -108,11 +110,11 @@
             <div><a href="season/5.html" class="subtitle">Season Five</a></div>
               <hr>
             <div><a href="characters.html" class="title">Characters</a></div>
-            <div><a href="character/institute.html" class="subtitle">Institute Employees</a></div>
-            <div><a href="character/recurring.html" class="subtitle">Recurring</a></div>
-            <div><a href="character/other.html" class="subtitle">Other</a></div>
+            <div><a href="char/institute.html" class="subtitle">Institute Employees</a></div>
+            <div><a href="char/recurring.html" class="subtitle">Recurring</a></div>
+            <div><a href="char/other.html" class="subtitle">Other</a></div>
               <hr>
-            <div><a href="entity.html" class="title">Entities</a></div>
+            <div><a href="fears.html" class="title">Entities</a></div>
           </nav>
         </section>
       </aside>
@@ -130,7 +132,10 @@
       <section class="cluster">
         <div>
           <p class="analysis">
-            this is the landing page relating to <b>the magnus archives.</b> in the navigation, one can find links to the <b>episode, character,</b> and <b>entity</b> pages, as well as more <i>specific</i> pages for all the seasons and groups of characters. 
+            <b>the Magnus Archives is a podcast</b> distributed by Rusty Quill Ltd. and licensed under a Creative Commons Attribution Non-Commercial Sharealike 4.0 International License.
+          </p>
+          <p class="analysis">
+            this is the hub-page for all my analyses and thoughts on <b>the magnus archives.</b>
           </p>
         </div>
       </section>
